--- a/pedidos.html
+++ b/pedidos.html
@@ -1,64 +1,311 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAIA Beach Club - Pedido</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        h1 {
-            color: #1e3d58;
-        }
-        .form-container {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .input-field {
-            margin-bottom: 15px;
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-        .button {
-            background-color: #1e3d58;
-            color: white;
-            padding: 12px 20px;
-            font-size: 18px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: #184a6b;
-        }
-    </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Maia Restaurante & Beach Club - Pedido</title>
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: linear-gradient(135deg, #64d9ca 0%, #fdd9c4 100%);
+    margin: 0; padding: 20px;
+    color: #333;
+  }
+  h1 {
+    text-align: center;
+    color: #0c6153;
+    margin-bottom: 5px;
+    font-weight: 700;
+  }
+  h2 {
+    color: #0c6153;
+    border-bottom: 2px solid #f5826f;
+    padding-bottom: 3px;
+    margin-top: 25px;
+  }
+  form {
+    max-width: 700px;
+    margin: 0 auto;
+    background: rgba(255 255 255 / 0.9);
+    padding: 20px 30px;
+    border-radius: 12px;
+    box-shadow: 0 5px 15px rgb(0 0 0 / 0.1);
+  }
+  label {
+    font-weight: 600;
+    display: block;
+    margin: 15px 0 5px;
+    color: #0a4e44;
+  }
+  input[type=text], textarea {
+    width: 100%;
+    padding: 8px 10px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 1rem;
+    box-sizing: border-box;
+  }
+  textarea {
+    min-height: 70px;
+    resize: vertical;
+  }
+  .section {
+    margin-top: 20px;
+  }
+  .checkbox-group {
+    margin-left: 15px;
+  }
+  .checkbox-group label {
+    font-weight: 400;
+    display: block;
+    margin-bottom: 6px;
+    cursor: pointer;
+  }
+  button {
+    margin-top: 25px;
+    background-color: #f5826f;
+    color: white;
+    border: none;
+    font-weight: 700;
+    font-size: 1.1rem;
+    padding: 12px 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    width: 100%;
+    transition: background-color 0.3s ease;
+  }
+  button:hover {
+    background-color: #d8654f;
+  }
+  .note {
+    font-size: 0.9rem;
+    color: #555;
+    text-align: center;
+    margin-top: 15px;
+  }
+</style>
 </head>
 <body>
 
-    <div class="form-container">
-        <h1>MAIA Beach Club - Pedido</h1>
-        <form action="https://wa.me/529841864937" method="get" target="_blank">
-            <label for="name">Nombre:</label>
-            <input type="text" id="name" name="name" class="input-field" placeholder="Escribe tu nombre" required>
+<h1>Maia Restaurante &amp; Beach Club</h1>
+<p style="text-align:center; font-weight:600; color:#0c6153;">
+  ¡Bienvenido! Por favor completa tu pedido abajo.
+</p>
 
-            <label for="table">Número de mesa:</label>
-            <input type="text" id="table" name="table" class="input-field" placeholder="Escribe tu número de mesa" required>
+<form id="pedidoForm">
 
-            <label for="order">Selecciona tus platillos:</label>
-            <textarea id="order" name="order" class="input-field" placeholder="Escribe lo que vas a pedir, separando cada platillo por coma..." rows="5" required></textarea>
+  <label for="nombre">Nombre del cliente *</label>
+  <input type="text" id="nombre" name="nombre" required placeholder="Tu nombre" />
 
-            <button type="submit" class="button">Enviar pedido</button>
-        </form>
+  <label for="mesa">Número de mesa o camastro *</label>
+  <input type="text" id="mesa" name="mesa" required placeholder="Mesa o camastro" />
+
+  <div class="section">
+    <h2>Desayunos – Lo dulce</h2>
+    <div class="checkbox-group" id="desayunoDulce">
+      <label><input type="checkbox" name="platillo" value="Plato de fruta"> Plato de fruta</label>
+      <label><input type="checkbox" name="platillo" value="Overnight Oats Jar"> Overnight Oats Jar</label>
+      <label><input type="checkbox" name="platillo" value="Pan Frances"> Pan Frances</label>
+      <label><input type="checkbox" name="platillo" value="Toast de masa madre con mantequilla de mani"> Toast de masa madre con mantequilla de mani</label>
+      <label><input type="checkbox" name="platillo" value="Hotcakes"> Hotcakes</label>
+      <label><input type="checkbox" name="platillo" value="Hotcakes con coco"> Hotcakes con coco</label>
     </div>
+  </div>
+
+  <div class="section">
+    <h2>Desayunos – Huevos</h2>
+    <div class="checkbox-group" id="desayunoHuevos">
+      <label><input type="checkbox" name="platillo" value="Huevos al gusto"> Huevos al gusto</label>
+      <label><input type="checkbox" name="platillo" value="Huevos Cazuela"> Huevos Cazuela</label>
+      <label><input type="checkbox" name="platillo" value="Huevos Cazuela con longaniza"> Huevos Cazuela con longaniza</label>
+      <label><input type="checkbox" name="platillo" value="Huevos Cazuela con arrachera"> Huevos Cazuela con arrachera</label>
+      <label><input type="checkbox" name="platillo" value="Huevos Black Fiore"> Huevos Black Fiore</label>
+      <label><input type="checkbox" name="platillo" value="Huevos Black Fiore (tofu)"> Huevos Black Fiore (tofu)</label>
+      <label><input type="checkbox" name="platillo" value="Croque Madame"> Croque Madame</label>
+      <label><input type="checkbox" name="platillo" value="Huevos Rotos"> Huevos Rotos</label>
+      <label><input type="checkbox" name="platillo" value="Omelette de Jamón y Queso"> Omelette de Jamón y Queso</label>
+      <label><input type="checkbox" name="platillo" value="Omelette Maia"> Omelette Maia</label>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Desayunos – Salados</h2>
+    <div class="checkbox-group" id="desayunoSalados">
+      <label><input type="checkbox" name="platillo" value="Enchiladas/Enfrijoladas"> Enchiladas/Enfrijoladas</label>
+      <label><input type="checkbox" name="platillo" value="Quesadillas"> Quesadillas</label>
+      <label><input type="checkbox" name="platillo" value="Chilaquiles"> Chilaquiles</label>
+      <label><input type="checkbox" name="platillo" value="Tacos con Chorizo Vegano"> Tacos con Chorizo Vegano</label>
+      <label><input type="checkbox" name="platillo" value="Avo Toast"> Avo Toast</label>
+      <label><input type="checkbox" name="platillo" value="Molletes"> Molletes</label>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Almuerzo y Cena – Tacos</h2>
+    <div class="checkbox-group" id="tacos">
+      <label><input type="checkbox" name="platillo" value="Tacos de cochinita"> Tacos de cochinita</label>
+      <label><input type="checkbox" name="platillo" value="Tacos de camarón tempura"> Tacos de camarón tempura</label>
+      <label><input type="checkbox" name="platillo" value="Tacos gobernador"> Tacos gobernador</label>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Guacamoles</h2>
+    <div class="checkbox-group" id="guacamoles">
+      <label><input type="checkbox" name="platillo" value="Guacamole vegano"> Guacamole vegano</label>
+      <label><input type="checkbox" name="platillo" value="Guacamole con mango"> Guacamole con mango</label>
+      <label><input type="checkbox" name="platillo" value="Guacamole con castacán"> Guacamole con castacán</label>
+      <label><input type="checkbox" name="platillo" value="Guacamole con chicharrón de cerdo"> Guacamole con chicharrón de cerdo</label>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Ensaladas</h2>
+    <div class="checkbox-group" id="ensaladas">
+      <label><input type="checkbox" name="platillo" value="Ensalada de Manzana"> Ensalada de Manzana</label>
+      <label><input type="checkbox" name="platillo" value="Ensalada de Pera"> Ensalada de Pera</label>
+      <label><input type="checkbox" name="platillo" value="Ensalada César"> Ensalada César</label>
+      <label><input type="checkbox" name="platillo" value="Ensalada de Falafel"> Ensalada de Falafel</label>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Bowls</h2>
+    <div class="checkbox-group" id="bowls">
+      <label><input type="checkbox" name="platillo" value="Bowl Vegetariano"> Bowl Vegetariano</label>
+      <label><input type="checkbox" name="platillo" value="Bowl Camarones Tempura"> Bowl Camarones Tempura</label>
+      <label><input type="checkbox" name="platillo" value="Bowl Pollo al Grill"> Bowl Pollo al Grill</label>
+      <label><input type="checkbox" name="platillo" value="Bowl Atún"> Bowl Atún</label>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Principales</h2>
+    <div class="checkbox-group" id="principales">
+      <label><input type="checkbox" name="platillo" value="Rib-eye"> Rib-eye</label>
+      <label><input type="checkbox" name="platillo" value="Arrachera al Grill"> Arrachera al Grill</label>
+      <label><input type="checkbox" name="platillo" value="Pechuga Asada"> Pechuga Asada</label>
+      <label><input type="checkbox" name="platillo" value="Filete de Pescado"> Filete de Pescado</label>
+      <label><input type="checkbox" name="platillo" value="Fusión de Pescado y Pulpo"> Fusión de Pescado y Pulpo</label>
+      <label><input type="checkbox" name="platillo" value="Camarones al gusto"> Camarones al gusto</label>
+      <label><input type="checkbox" name="platillo" value="Milenesa de pollo"> Milenesa de pollo</label>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Sándwiches y Hamburguesas</h2>
+    <div class="checkbox-group" id="sandwiches">
+      <label><input type="checkbox" name="platillo" value="Hamburguesa"> Hamburguesa</label>
+      <label><input type="checkbox" name="platillo" value="Hamburguesa Vegana"> Hamburguesa Vegana</label>
+      <label><input type="checkbox" name="platillo" value="Hamburguesa de Pollo"> Hamburguesa de Pollo</label>
+      <label><input type="checkbox" name="platillo" value="Bollo de Setas BBQ"> Bollo de Setas BBQ</label>
+      <label><input type="checkbox" name="platillo" value="Club Sándwich"> Club Sándwich</label>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Postres</h2>
+    <div class="checkbox-group" id="postres">
+      <label><input type="checkbox" name="platillo" value="Chocolate con Pretzel"> Chocolate con Pretzel</label>
+      <label><input type="checkbox" name="platillo" value="Tarta de Mango con Rompope"> Tarta de Mango con Rompope</label>
+      <label><input type="checkbox" name="platillo" value="Chocosaave"> Chocosaave</label>
+      <label><input type="checkbox" name="platillo" value="Copa Helada"> Copa Helada</label>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Extras</h2>
+    <div class="checkbox-group" id="extras">
+      <label><input type="checkbox" name="platillo" value="Papas fritas"> Papas fritas</label>
+      <label><input type="checkbox" name="platillo" value="Aguacate"> Aguacate</label>
+      <label><input type="checkbox" name="platillo" value="Pan tostado"> Pan tostado</label>
+      <label><input type="checkbox" name="platillo" value="Frijoles"> Frijoles</label>
+      <label><input type="checkbox" name="platillo" value="Amazonas"> Amazonas</label>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Menú niños</h2>
+    <div class="checkbox-group" id="menuNinos">
+      <label><input type="checkbox" name="platillo" value="Deditos de Queso"> Deditos de Queso</label>
+      <label><input type="checkbox" name="platillo" value="Nuggets Veganos"> Nuggets Veganos</label>
+      <label><input type="checkbox" name="platillo" value="Pasta Kids"> Pasta Kids</label>
+      <label><input type="checkbox" name="platillo" value="Quesadilla de Queso"> Quesadilla de Queso</label>
+      <label><input type="checkbox" name="platillo" value="Tiras de Pollo"> Tiras de Pollo</label>
+      <label><input type="checkbox" name="platillo" value="Hummus"> Hummus</label>
+      <label><input type="checkbox" name="platillo" value="Paletas Heladas"> Paletas Heladas</label>
+    </div>
+  </div>
+
+  <label for="comentarios">Comentarios especiales</label>
+  <textarea id="comentarios" name="comentarios" placeholder="Sin cebolla, poco picante, etc."></textarea>
+
+  <label for="numeroDestino">Número WhatsApp para enviar el pedido *</label>
+  <input type="text" id="numeroDestino" name="numeroDestino" placeholder="Ejemplo: 5219841864937" required />
+
+  <button type="submit">Enviar pedido por WhatsApp</button>
+
+  <p class="note">* Campos obligatorios</p>
+</form>
+
+<script>
+  // Platillos no disponibles para bloquear (escribí exactamente igual que en value)
+  const platillosNoDisponibles = [
+    // Por ejemplo: "Hotcakes con coco", "Tacos de cochinita"
+  ];
+
+  window.addEventListener('DOMContentLoaded', () => {
+    platillosNoDisponibles.forEach(nombre => {
+      const inputs = document.querySelectorAll('input[type=checkbox][value="'+nombre+'"]');
+      inputs.forEach(input => {
+        input.disabled = true;
+        const label = input.parentElement;
+        label.style.color = '#aaa';
+        label.style.textDecoration = 'line-through';
+      });
+    });
+  });
+
+  document.getElementById('pedidoForm').addEventListener('submit', e => {
+    e.preventDefault();
+
+    const nombre = document.getElementById('nombre').value.trim();
+    const mesa = document.getElementById('mesa').value.trim();
+    const comentarios = document.getElementById('comentarios').value.trim();
+    const numeroDestino = document.getElementById('numeroDestino').value.trim();
+
+    if(!nombre || !mesa || !numeroDestino){
+      alert('Por favor completá nombre, mesa/camastro y número de WhatsApp para enviar el pedido.');
+      return;
+    }
+
+    const platillosSeleccionados = [...document.querySelectorAll('input[name=platillo]:checked')]
+      .map(input => input.value);
+
+    if(platillosSeleccionados.length === 0){
+      alert('Por favor seleccioná al menos un platillo.');
+      return;
+    }
+
+    // Limpiar número (quitar espacios, signos, etc)
+    const numeroLimpio = numeroDestino.replace(/\D/g, '');
+
+    let mensaje = `*Pedido Maia Restaurante & Beach Club*%0A`;
+    mensaje += `*Nombre:* ${encodeURIComponent(nombre)}%0A`;
+    mensaje += `*Mesa/Camastro:* ${encodeURIComponent(mesa)}%0A`;
+    mensaje += `*Pedido:*%0A`;
+    platillosSeleccionados.forEach(p => {
+      mensaje += `- ${encodeURIComponent(p)}%0A`;
+    });
+    if(comentarios){
+      mensaje += `*Comentarios:* ${encodeURIComponent(comentarios)}%0A`;
+    }
+
+    const url = `https://wa.me/${numeroLimpio}?text=${mensaje}`;
+    window.open(url, '_blank');
+  });
+</script>
 
 </body>
 </html>
+
