--- a/pedidos.html
+++ b/pedidos.html
@@ -108,7 +108,7 @@
       <label><input type="checkbox" name="platillo" value="Pan Frances"> Pan Frances</label>
       <label><input type="checkbox" name="platillo" value="Toast de masa madre con mantequilla de mani"> Toast de masa madre con mantequilla de mani</label>
       <label><input type="checkbox" name="platillo" value="Hotcakes"> Hotcakes</label>
-      <label><input type="checkbox" name="platillo" value="Hotcakes con coco"> Hotcakes con coco</label>
+    
     </div>
   </div>
 
@@ -208,7 +208,7 @@
     <div class="checkbox-group" id="postres">
       <label><input type="checkbox" name="platillo" value="Chocolate con Pretzel"> Chocolate con Pretzel</label>
       <label><input type="checkbox" name="platillo" value="Tarta de Mango con Rompope"> Tarta de Mango con Rompope</label>
-      <label><input type="checkbox" name="platillo" value="Chocosaave"> Chocosaave</label>
+      <label><input type="checkbox" name="platillo" value="Chocosuave"> Chocosuave</label>
       <label><input type="checkbox" name="platillo" value="Copa Helada"> Copa Helada</label>
     </div>
   </div>
@@ -220,7 +220,16 @@
       <label><input type="checkbox" name="platillo" value="Aguacate"> Aguacate</label>
       <label><input type="checkbox" name="platillo" value="Pan tostado"> Pan tostado</label>
       <label><input type="checkbox" name="platillo" value="Frijoles"> Frijoles</label>
-      <label><input type="checkbox" name="platillo" value="Amazonas"> Amazonas</label>
+      <label><input type="checkbox" name="platillo" value="Arroz"> Arroz</label>
+      <label><input type="checkbox" name="platillo" value="Panela"> Panela</label>
+      <label><input type="checkbox" name="platillo" value="Queso Azul"> Queso Azul</label>
+      <label><input type="checkbox" name="platillo" value="Queso de cabra"> Queso de cabra</label>
+      <label><input type="checkbox" name="platillo" value="Ensalada"> Ensalada</label>
+      <label><input type="checkbox" name="platillo" value="Pan Pita"> Pan Pita</label>
+      <label><input type="checkbox" name="platillo" value="Tocino"> Tocino</label>
+      <label><input type="checkbox" name="platillo" value="Crudites"> Crudites</label>
+      <label><input type="checkbox" name="platillo" value="Vegetales"> Vegetales</label>
+      <label><input type="checkbox" name="platillo" value="Pollo"> Pollo</label>
     </div>
   </div>
 
@@ -308,4 +317,5 @@
 
 </body>
 </html>
+
 
